# nspass

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Cargo.toml  Category.cpp  Category.h  Database.cpp  Database.h  Group.cpp  Group.h  LICENSE  Password.cpp  Password.h  README.md  SQLite3Database.cpp  SQLite3Database.h  SQLite3Storage.cpp  SQLite3Storage.h  Site.cpp  Site.h  Storage.cpp  Storage.h  main.cpp
data/: .gitignore
gui/: PasswordManager.fbp
src/: Application.cpp  Application.h  ApplicationException.cpp  ApplicationException.h  Category.cpp  Category.h  CommandLine.cpp  CommandLine.h  Group.cpp  Group.h  IdGenerator.cpp  IdGenerator.h  JSONStorage.cpp  JSONStorage.h  NSPass.cpp  NSPass.h  OwnPass.cpp  OwnPass.h  Password.cpp  Password.h  README.md  Site.cpp  Site.h  Vault.cpp  Vault.h  lib.rs  main.cpp  main.rs
src/cli/: CommandLine.cpp  CommandLine.h  CommandParser.cpp  CommandParser.h  InvalidCommandSyntaxException.cpp  InvalidCommandSyntaxException.h
src/cli/input/: BoolConfirmInput.cpp  BoolConfirmInput.h  ConfirmInput.cpp  ConfirmInput.h  PromptConfirmInput.cpp  PromptConfirmInput.h  PromptSecretInput.cpp  PromptSecretInput.h  SecretInput.h  StringSecretInput.cpp  StringSecretInput.h  UserInput.cpp  UserInput.h
src/cli/output/: CSVTableOutput.cpp  CSVTableOutput.h  StreamTableOutput.cpp  StreamTableOutput.h  TableOutput.cpp  TableOutput.h  TableOutputFactory.cpp  TableOutputFactory.h
src/cli/parsers/: CopyPasswordCommandParser.cpp  CopyPasswordCommandParser.h  CreateCommandParser.cpp  CreateCommandParser.h  CreatePasswordCommandParser.cpp  CreatePasswordCommandParser.h  DeletePasswordCommandParser.cpp  DeletePasswordCommandParser.h  DumpStorageCommandParser.cpp  DumpStorageCommandParser.h  ImportCommandParser.cpp  ImportCommandParser.h  InspectStorageCommandParser.cpp  InspectStorageCommandParser.h  ListCommandParser.cpp  ListCommandParser.h  Parser.cpp  Parser.h  PurgeStorageCommandParser.cpp  PurgeStorageCommandParser.h  UpdatePasswordCommandParser.cpp  UpdatePasswordCommandParser.h
src/commands/: CannotUndoException.cpp  CannotUndoException.h  Command.cpp  Command.h  CommandRunner.cpp  CommandRunner.h  CopyPasswordCommand.cpp  CopyPasswordCommand.h  CreateCategoryCommand.cpp  CreateCategoryCommand.h  CreateCommand.cpp  CreateCommand.h  CreateGroupCommand.cpp  CreateGroupCommand.h  CreatePasswordCommand.cpp  CreatePasswordCommand.h  DeleteGroupCommand.cpp  DeleteGroupCommand.h  DeletePasswordCommand.cpp  DeletePasswordCommand.h  DumpStorageCommand.cpp  DumpStorageCommand.h  HelpCommand.cpp  HelpCommand.h  ImportLastPassCommand.cpp  ImportLastPassCommand.h  InspectStorageCommand.cpp  InspectStorageCommand.h  ListApplicationsCommand.cpp  ListApplicationsCommand.h  ListCategoriesCommand.cpp  ListCategoriesCommand.h  ListCommand.cpp  ListCommand.h  ListGroupsCommand.cpp  ListGroupsCommand.h  ListPasswordsCommand.cpp  ListPasswordsCommand.h  ListSitesCommand.cpp  ListSitesCommand.h  (+14 more)
src/config/: MacSettings.h  MacSettings.mm  Settings.cpp  Settings.h  SettingsFactory.cpp  SettingsFactory.h  UnixSettings.cpp  UnixSettings.h
src/crypto/: Base64Encoder.cpp  Base64Encoder.h  BlockCrypto.cpp  BlockCrypto.h  EncryptedFile.cpp  EncryptedFile.h  InitCrypto.cpp  InitCrypto.h  InitializationVector.cpp  InitializationVector.h  SecureString.cpp  SecureString.h  StringCrypto.cpp  StringCrypto.h
src/gui/: App.cpp  App.h  BaseCategoryForm.cpp  BaseCategoryForm.h  CategoryForm.cpp  CategoryForm.h  ContentPanel.cpp  ContentPanel.h  CreateGroupForm.cpp  CreateGroupForm.h  CreatePasswordForm.cpp  CreatePasswordForm.h  GeneratedUI.cpp  GeneratedUI.h  GlobalIds.h  GroupForm.cpp  GroupForm.h  MainFrame.cpp  MainFrame.h  MainMenuBar.cpp  MainMenuBar.h  MainToolbar.cpp  MainToolbar.h  PasswordForm.cpp  PasswordForm.h  TreeView.cpp  TreeView.h
src/gui/icons/: Clear32x32.png.h  (+13 more)
src/query/: CategoryNotFoundException.h  CategoryQuery.cpp  CategoryQuery.h  GroupNotFoundException.h  GroupQuery.cpp  GroupQuery.h  PasswordNotFoundException.h  PasswordQuery.cpp  PasswordQuery.h  Query.cpp  Query.h  RecordNotFoundException.h
src/signals/: CategoryUpdatedSignal.h  GroupUpdatedSignal.h  PasswordSignal.h  PasswordUpdateSignal.h  Signal.h  SignalContext.cpp  SignalContext.h
src/storage/: CategoriesSerializer.cpp  CategoriesSerializer.h  CategorySerializer.cpp  CategorySerializer.h  GroupSerializer.cpp  GroupSerializer.h  InvalidStorageException.cpp  InvalidStorageException.h  JsonParser.cpp  JsonParser.h  JsonSerializer.cpp  JsonSerializer.h  JsonStorage.cpp  JsonStorage.h  JsonStorageFactory.cpp  JsonStorageFactory.h  JsonWriter.cpp  JsonWriter.h  PasswordSerializer.cpp  PasswordSerializer.h  SiteSerializer.cpp  SiteSerializer.h  Storage.cpp  Storage.h  StorageException.cpp  StorageException.h  StorageFactory.cpp  StorageFactory.h  StorageHeader.cpp  StorageHeader.h  StringCrypto.cpp  StringCrypto.h
src/test/: catch.hpp  test.cpp  test_command_line.cpp  test_database.cpp  test_json_storage.cpp  test_main.cpp  test_models.cpp  test_string_crypto.cpp  test_vault.cpp
test/: SampleStorageFixture.cpp  SampleStorageFixture.h  TestUtility.cpp  TestUtility.h  test.cpp  test_command_line.cpp  test_database.cpp  test_json_storage.cpp  test_main.cpp  test_models.cpp  test_vault.cpp
test/cli/: test_command_parser.cpp
test/commands/: test_command_runner.cpp  test_copy_password_command.cpp  test_create_category_command.cpp  test_create_group_command.cpp  test_delete_group_command.cpp  test_delete_password_command.cpp  test_import_lastpass_command.cpp  test_update_category_command.cpp  test_update_group_command.cpp  test_update_password_command.cpp
test/config/: test_mac_settings.cpp  test_settings.cpp  test_unix_settings.cpp
test/crypto/: test_base64_encoder.cpp  test_block_crypto.cpp  test_encrypted_file.cpp  test_initialization_vector.cpp  test_secure_string.cpp  test_string_crypto.cpp
test/query/: test_category_query.cpp  test_group_query.cpp  test_password_query.cpp
test/signals/: test_signal.cpp
test/storage/: test_json_storage.cpp  test_storage_header.cpp
(+62 files in other folders)
